textAlign fixing

--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ footer{
 
 @media only screen and (max-width: 1130px){
     .wrapper{
+        text-align: center;
         display: flex;
         flex-direction: column;
         align-items: center;
